--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -1,32 +1,67 @@
-<app-titulo [titulo]='titulo'></app-titulo>
-<br>
-
-<div *ngIf="alunoSelecionado">
-<p><b>Aluno selecionado: </b>{{alunoSelecionado}}.</p>
-<button class="btn btn-primary" (click)="voltarOnClick()">Voltar</button>
-</div>
-
-<div *ngIf="!alunoSelecionado">
-  <p><b>Nenhum aluno selecionado.</b></p>
-
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Nome</th>
-        <th scope="col">Sobrenome</th>
-        <th scope="col">Telefone</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let aluno of alunos" 
-          style="cursor: pointer;" 
-          (click)="alunoSelectOnClick(aluno)">
-        <th scope="row">{{aluno.id}}</th>
+<div class="row">
+  
+  <div class="col-sm-6" *ngIf="alunoSelecionado">
+    
+    <div class="row">
+      <div class="col-sm-6">
+        <app-titulo [titulo]="'Cód.Aluno: ' + alunoSelecionado.id"></app-titulo>
+      </div>
+      <div style="text-align: end;">
+        <button class="btn btn-outline-danger" (click)="voltarOnClick()">Fechar</button>
+      </div>
+    </div>
+    
+    <form [formGroup]="alunoForm" (submit)="alunoSubmit()">
+      <div class="form-group">
+        <label for="formGroupExampleInput" class="form-label">Nome</label>
+        <input type="text" formControlName="nome" class="form-control">
+      </div>
+      <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">Sobrenome</label>
+        <input type="text" formControlName="sobrenome" class="form-control">
+      </div>
+      <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">Telefone</label>
+        <input type="text" formControlName="telefone" class="form-control">
+      </div>
+      <div class="form-group"> 
+        <hr>
+        <button class="btn btn-sm btn-success" [disabled]="!alunoForm.valid">Enviar</button><!--!alunoForm.valid não for válido desabilita o botão -->
+      </div>
+    </form>
+    
+  </div>
+  
+  <div [ngClass]="{'col-sm-6': alunoSelecionado, 'col-sm-12': !alunoSelecionado}">
+    <app-titulo [titulo]="titulo"></app-titulo>
+    
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Visualizar</th>
+          <th scope="col">Nome</th>
+          <th scope="col">Sobrenome</th>
+          <th scope="col">Telefone</th>
+          <th scope="col">Opções</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let aluno of alunos">
+        <td><button (click)="alunoSelectOnClick(aluno)" class="btn btn-sm btn-outline-warning">Detalhe</button></td>
+        <td scope="row">{{aluno.id}}</td>
         <td>{{aluno.nome}}</td>
         <td>{{aluno.sobrenome}}</td>
         <td>{{aluno.telefone}}</td>
+        <td>
+          <div class="btn-group">          
+            <button class="btn btn-sm btn-outline-primary">Professores</button>
+            <button class="btn btn-sm btn-outline-danger">Desativar</button>
+          </div>
+        </td>
       </tr>
     </tbody>
   </table>
+</div>
+
 </div>
