--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,37 +1,44 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
+  <div class="container">
+
     <a class="navbar-brand" routerLink="dashboard">Smart School</a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-
-        <li class="nav-item">
-          <a class="nav-link" routerLink="alunos" routerLinkActive="active">Alunos</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" routerLink="professores" routerLinkActive="active">Professores</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" routerLink="perfil" routerLinkActive="active">Perfil</a>
-        </li>
+    <div class="container-fluid">
+         
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
         
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown link
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-
-        </li>
-      </ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="alunos">Alunos</a>
+          </li>
+          
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="professores">Professores</a>
+          </li>         
+          
+        </ul>
+        
+        <ul class="navbar-nav" dropdown>
+          
+          <li class="nav-item dropdown">
+            <a id="button-basic" dropdownToggle class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" 
+            data-bs-toggle="dropdown" aria-expanded="false" style="cursor: pointer;">
+              Cristiano
+            </a>
+            <div id="dropdown-basic" *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" routerLink="perfil">Perfil</a></li>
+              <li><a class="dropdown-item" href="#">Sair</a></li>
+            </div>
+          </li>
+          
+        </ul>   
+        
+      </div>
     </div>
   </div>
 </nav>
