--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -7,26 +7,26 @@
         <app-titulo [titulo]="'Cód.Aluno: ' + alunoSelecionado.id"></app-titulo>
       </div>
       <div style="text-align: end;">
-        <button class="btn btn-outline-danger" (click)="voltarOnClick()">Fechar</button>
+        <button class="text-dark btn btn-outline-danger" (click)="voltarOnClick()">Fechar</button>
       </div>
     </div>
     
     <form [formGroup]="alunoForm" (submit)="alunoSubmit()">
       <div class="form-group">
-        <label for="formGroupExampleInput" class="form-label">Nome</label>
+        <label for="formGroupExampleInput" class="form-label">Nome:</label>
         <input type="text" formControlName="nome" class="form-control">
       </div>
-      <div class="mb-3">
-        <label for="formGroupExampleInput2" class="form-label">Sobrenome</label>
+      <div class="form-group">
+        <label for="formGroupExampleInput2" class="form-label">Sobrenome:</label>
         <input type="text" formControlName="sobrenome" class="form-control">
       </div>
-      <div class="mb-3">
-        <label for="formGroupExampleInput2" class="form-label">Telefone</label>
+      <div class="form-group">
+        <label for="formGroupExampleInput2" class="form-label">Telefone:</label>
         <input type="text" formControlName="telefone" class="form-control">
       </div>
       <div class="form-group"> 
         <hr>
-        <button class="btn btn-sm btn-success" [disabled]="!alunoForm.valid">Enviar</button><!--!alunoForm.valid não for válido desabilita o botão -->
+        <button class="btn btn-success" [disabled]="!alunoForm.valid">Enviar</button><!--!alunoForm.valid não for válido desabilita o botão -->
       </div>
     </form>
     
@@ -38,8 +38,8 @@
     <table class="table table-hover">
       <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Visualizar</th>
+          <th scope="col">Detalhe</th>
+          <th scope="col">Código</th>
           <th scope="col">Nome</th>
           <th scope="col">Sobrenome</th>
           <th scope="col">Telefone</th>
@@ -48,15 +48,17 @@
       </thead>
       <tbody>
         <tr *ngFor="let aluno of alunos">
-        <td><button (click)="alunoSelectOnClick(aluno)" class="btn btn-sm btn-outline-warning">Detalhe</button></td>
+        <td>
+          <button (click)="alunoSelectOnClick(aluno)" class="text-dark btn btn-sm btn-outline-warning">Detalhe</button>
+        </td>
         <td scope="row">{{aluno.id}}</td>
         <td>{{aluno.nome}}</td>
         <td>{{aluno.sobrenome}}</td>
         <td>{{aluno.telefone}}</td>
         <td>
           <div class="btn-group">          
-            <button class="btn btn-sm btn-outline-primary">Professores</button>
-            <button class="btn btn-sm btn-outline-danger">Desativar</button>
+            <button (click)="openModal(template)" class="text-dark btn btn-sm btn-outline-primary" style="margin: 0 5px">Professor</button>
+            <button class="text-dark btn btn-sm btn-outline-danger" style="margin: 0 5px">Desativar</button>
           </div>
         </td>
       </tr>
@@ -65,3 +67,14 @@
 </div>
 
 </div>
+ 
+<ng-template #template>
+  <div class="modal-body">
+    <app-professores></app-professores>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn pull-right" aria-label="Close" (click)="modalRef?.hide()">
+    FECHAR
+    </button>
+  </div>
+</ng-template>
