--- a/src/app/professores/professores.component.html
+++ b/src/app/professores/professores.component.html
@@ -6,17 +6,17 @@
         <app-titulo [titulo]="'Cód: ' + professorSelecionado.id"></app-titulo>
       </div>
       <div style="text-align: end;">
-        <button class="btn btn-outline-danger" (click)="voltarOnClick()">Fechar</button>
+        <button class="text-dark btn btn-outline-danger" (click)="voltarOnClick()">Fechar</button>
       </div>
     </div>
     
     <form>
       <div class="form-group">
-        <label for="formGroupExampleInput" class="form-label">Nome</label>
+        <label for="formGroupExampleInput" class="form-label">Nome:</label>
         <input type="text" class="form-control" value="{{professorSelecionado.nome}}">
       </div>
-      <div class="mb-3">
-        <label for="formGroupExampleInput2" class="form-label">Disciplina</label>
+      <div class="form-group">
+        <label for="formGroupExampleInput2" class="form-label">Disciplina:</label>
         <input type="text" class="form-control" value="{{professorSelecionado.disciplina}}">
       </div>
       <div class="form-group">
@@ -33,21 +33,40 @@
     <table class="table table-hover">
       <thead>
         <tr>
-          <th scope="col">#</th>
+          <th scope="col">Visualizar</th>
+          <th scope="col">Código</th>
           <th scope="col">Nome</th>
           <th scope="col">Disciplina</th>
+          <th scope="col">Opções</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let prof of professores" 
-        style="cursor: pointer;"
-        (click)="professorSelectOnClick(prof)">
+        <tr *ngFor="let prof of professores">
+        <td>
+          <button (click)="professorSelectOnClick(prof)" class="text-dark btn btn-sm btn-outline-warning">Detalhe</button>
+        </td>
         <th scope="row">{{prof.id}}</th>
         <td>{{prof.nome}}</td>
         <td>{{prof.disciplina}}</td>
+        <td>
+          <div class="btn-group">
+            <button (click)="openModal(template)" class=" text-dark btn btn-sm btn-outline-primary">Alunos</button>
+          </div>
+        </td>
       </tr>
     </tbody>
   </table>
 </div>
 
 </div>
+ 
+<ng-template #template>
+  <div class="modal-body">
+
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-sm pull-right" aria-label="Close" (click)="modalRef?.hide()">
+    FECHAR
+    </button>
+  </div>
+</ng-template>
